fixed some layout bugs

--- a/src/App.scss
+++ b/src/App.scss
@@ -40,7 +40,8 @@ button, a {
   border: none;
   background: none;
   text-decoration: none;
-  color: var(--text-color);
+  color: var(--bg-button);
+  background-color: var(--bg-header);
   &:focus {
     outline: 0;
   }
@@ -61,24 +62,22 @@ header {
   }
   .logo{
     display: flex;
-    justify-content: space-evenly;
-    height:5rem;
+    justify-content: space-between;
+    height:3rem;
     width: 100%;
     a{
-      width: 50%;
-      border-right: 4px dotted black;
       img {
         width: 100px;
       }
     }
-    button{
-      width:50%;
+    .menuToggle{
+      height: 3rem;
+      width: 3rem;
       display: flex;
-      object{
-        height:2rem;
-        widows: 2rem;
-        fill: #009aec;
-      }
+      font-weight: bold;
+      font-size: 1.25rem;
+      justify-content: center;
+      align-items: center;
     }
   }
   .links{
@@ -99,7 +98,7 @@ header {
   }
 }
 
-.invisible{
+.hidden{
   display:none;
 }
 //TABLET VIEW
